# block-memory-allocator

./: .gitignore  CMakeLists.txt  README.md  callgrind.out.16383
src/: allocator.c  allocator.cpp  allocator.h  main.c  main.cpp
